public/stylesheets/modal.css
.modal * {
  color: black;
  /* border: red 1px solid;  */
}

.modal-header {
  border: none;
  padding-bottom: 20px;
}

.modal-dialog {
  max-width: 90% !important;
}

.vertical-center {

  display: flex;
  align-items: center;
}

#modal-button {
  background-color: #00c0f3;
  border: none;
  padding: 8px 58px;
  border-radius: 12px;
}

#modal-hr {
  border: 1px solid #7f8080;
  margin-top: 5px;
  margin-bottom: 10px;
}

#info-col {
  padding-right: 0;
  padding-top: 0;
}

.modal-display-btn {
  border: 0;
  padding-left: 0px;
}

#modal-description {
  font-size: 14px;
  margin-top: 20px;
  margin-bottom: 40px;
  line-height: 18px;
}

.modal-dialog {
  margin: 0 auto;
}

.modal-content {
  padding: 0 20px;
}

.modal-header {
  margin-top: 20px;
}

.modal-header .close {
  padding: 0;
}

#spacer-col-modal {
  height: 20px;
}

.modal-body {
  margin-bottom: 56px;
}

#modal-tags {
  letter-spacing: 1px;
}

@media (min-width: 0) {

  .modal-body,
  #modal-body-container {
    padding: 0;
  }

  #project-carousel {
    width: 290px;
    margin: 0 auto;
  }

  #modal-title {
    margin-top: 20px;
    font-size: 27px;
    font-weight: 700;
    line-height: 45px;
    margin-bottom: 0px;
  }

  #modal-github-button {
    background-color: transparent;
    border: none;
  }

  #modal-github-link-icon {
    color: #2b2d31;
    transition: .25s;
    font-size: 34px;
  }

  #modal-github-link-icon:hover {
    color: #00c0f3;
  }

  /* #github-icon-desktop {
    height: 46px;
  } */
}

@media (min-width: 576px) {

  #project-carousel {
    width: inherit;
  }
}


@media (min-width: 992px) {

  .modal-body [class^='col'] {
    margin-left: 20px;
  }
}
/*
@media (min-width: 0) {

} */

